--- a/uikit-2.27.4/astam-modular-paintings.html
+++ b/uikit-2.27.4/astam-modular-paintings.html
@@ -348,7 +348,19 @@
 
 
 </div>
+<div class="tm-content-wrap"><!-- .tm-content-wrap Start -->
 
+        <div id="pics" class="tm-content-full">
+            <h1 class="uk-text-center">Посмотреть в интерьере</h1>
+            <div class="tm-pics-wrap">
+                <div class="uk-flex">
+                    <div class="uk-card uk-card-default uk-card-body"><img src="images/pics/pic1.jpg" alt="pic1"></div>
+                    <div class="uk-card uk-card-default uk-card-body uk-margin-left"><img src="images/pics/pic2.jpg" alt="pic2"></div>
+                    <div class="uk-card uk-card-default uk-card-body uk-margin-left"><img src="images/pics/pic3.jpg" alt="pic3"></div>
+                </div>
+            </div>
+        </div>
+</div>
 
     <!-- Script for range input Start -->
     <script src="range-slider.js"></script>
