--- a/uikit-2.27.4/astam-modular-paintings.html
+++ b/uikit-2.27.4/astam-modular-paintings.html
@@ -301,7 +301,9 @@
                         </form>
                     </div>
                     <div class="uk-width-small-1-1 uk-width-medium-6-10">
-
+                        <canvas id="canvas" width="300" height="225" style="border: 1px solid grey"></canvas>
+                        <button class="draw">Rect</button>
+                        <button class="undraw">Del</button>
                     </div>
                 </div>
             </div>
@@ -433,8 +435,43 @@
         </div>
 </div><!-- Working End -->
 
+<div class="tm-content-wrap"><!-- Madein Start -->
+
+        <div id="madein" class="tm-content-full">
+            <h1 class="uk-text-center">Сделано в Аста М</h1>
+            <div class="tm-madein-wrap">
+                <div class="madein-list">
+                    <ul class="madein-list-ul">
+                        <li>Пигментные краски, ни какого сольвента
+</li>
+                        <li>Качественный плотный холст (380 г/м<sup>2</sup>)</li>
+                        <li>Художественный акрил-водный лак, 
+защищающий холст от пыли и выгорания</li>
+                        <li>Лак покрывается валиком. Защита на года</li>
+                        <li>Миллионы изображений из фотобанка</li>
+                        <li>Возможность загрузки огромных фотографий</li>
+                    </ul>
+                </div>
+                <div class="madein-block-wrap uk-flex">
+                    <div class="madein-block madein-block-pic">
+                        <img src="images/madein/girl.png" alt="TbOTR">
+                    </div>
+                    <div class="madein-block madein-block-text">
+                        <div class="madein-block-text-in">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt debitis, ut consequatur impedit quaerat tempora a aperiam modi officiis ullam ab, hic excepturi architecto dolorem. Est, hic amet repudiandae impedit nulla placeat veritatis facere officiis harum, dicta, voluptate assumenda eligendi ad sunt ab minus sequi quae illo, natus beatae nostrum. <br> <br>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt debitis, ut consequatur impedit quaerat tempora a aperiam modi officiis ullam ab, hic excepturi architecto dolorem. Est, hic amet repudiandae impedit nulla placeat veritatis facere officiis harum, dicta, voluptate assumenda eligendi ad sunt ab minus sequi quae illo, natus beatae nostrum. <br> <br>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt debitis, ut consequatur impedit quaerat tempora a aperiam modi officiis ullam ab, hic excepturi architecto dolorem.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div><!-- Madein End -->
+
+
     <!-- Script for range input Start -->
     <script src="range-slider.js"></script>
+    <script src="js/canvas.js"></script>
     <script>
         (function () {
 
