--- a/uikit-2.27.4/astam-modular-paintings.html
+++ b/uikit-2.27.4/astam-modular-paintings.html
@@ -442,11 +442,9 @@
             <div class="tm-madein-wrap">
                 <div class="madein-list">
                     <ul class="madein-list-ul">
-                        <li>Пигментные краски, ни какого сольвента
-</li>
+                        <li>Пигментные краски, ни какого сольвента</li>
                         <li>Качественный плотный холст (380 г/м<sup>2</sup>)</li>
-                        <li>Художественный акрил-водный лак, 
-защищающий холст от пыли и выгорания</li>
+                        <li>Художественный акрил-водный лак, защищающий холст от пыли и выгорания</li>
                         <li>Лак покрывается валиком. Защита на года</li>
                         <li>Миллионы изображений из фотобанка</li>
                         <li>Возможность загрузки огромных фотографий</li>
@@ -467,6 +465,20 @@
             </div>
         </div>
 </div><!-- Madein End -->
+
+<div class="tm-content-wrap"><!-- Vidblk Start -->
+
+        <div id="vidblk" class="tm-content-full">
+            <h1 class="uk-text-center">Посмотрите это</h1>
+            <div class="tm-vidblk-wrap">
+                <div class="uk-flex">
+                    <div class="uk-card uk-card-default uk-card-body"><img src="images/vidblk/vid1.jpg" alt="vid1"></div>
+                    <div class="uk-card uk-card-default uk-card-body uk-margin-left"><img src="images/vidblk/vid2.jpg" alt="vid2"></div>
+                    <div class="uk-card uk-card-default uk-card-body uk-margin-left"><img src="images/vidblk/vid3.jpg" alt="vid3"></div>
+                </div>
+            </div>
+        </div>
+</div><!-- Vidblk End -->
 
 
     <!-- Script for range input Start -->
