--- a/uikit-2.27.4/astam-modular-paintings.html
+++ b/uikit-2.27.4/astam-modular-paintings.html
@@ -480,6 +480,24 @@
         </div>
 </div><!-- Vidblk End -->
 
+<div class="tm-content-wrap"><!-- Templates Start -->
+
+        <div id="tpls" class="tm-content-full">
+            <h1 class="uk-text-center">Примеры работ</h1>
+            <div class="tm-tpls-wrap">
+                <div class="uk-grid">
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work1.jpg" alt="work1"></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work2.jpg" alt="work2"></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work3.jpg" alt="work3"></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work4.jpg" alt="work4"></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work5.jpg" alt="work5"></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work6.jpg" alt="work6"></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work7.jpg" alt="work7"></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work8.jpg" alt="work8"></div>
+                </div>
+            </div>
+        </div>
+</div><!-- Templates End -->
 
     <!-- Script for range input Start -->
     <script src="range-slider.js"></script>
