--- a/uikit-2.27.4/astam-modular-paintings.html
+++ b/uikit-2.27.4/astam-modular-paintings.html
@@ -495,6 +495,7 @@
                     <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work7.jpg" alt="work7"></div>
                     <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work8.jpg" alt="work8"></div>
                 </div>
+                <div class="tm-tpls-button uk-text-center"><a href="#">посмотреть все работы</a></div>
             </div>
         </div>
 </div><!-- Templates End -->
