--- a/uikit-2.27.4/astam-modular-paintings.html
+++ b/uikit-2.27.4/astam-modular-paintings.html
@@ -500,6 +500,36 @@
         </div>
 </div><!-- Templates End -->
 
+<div class="tm-content-wrap"><!-- GetInTouch Start -->
+
+        <div id="git" class="tm-content-full">
+            <h1 class="uk-text-center">Связаться с нами</h1>
+            <div class="tm-git-wrap">
+                <div class="tm-git-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eaque eveniet ipsam tempore aliquid doloribus dolores ut nulla nobis optio adipisci, debitis eligendi odio animi cum culpa quaerat nihil itaque est tenetur repellendus. Sapiente quia, numquam eius reiciendis ratione blanditiis dignissimos totam alias iste accusamus dolorum corporis itaque ea optio ex. Fugit in quisquam, ipsam, tempora consequuntur fuga atque vitae!
+                </div>
+                <div class="tm-git-form">
+                    <form class="uk-form">
+                        <div class="tm-git-form-input">
+                            <input type="text" placeholder="Введите Ваше имя" class="uk-form-width-medium">
+                        </div>
+                        <div class="tm-git-form-input">
+                            <input type="email" placeholder="Введите Ваш e-mail" class="uk-form-width-medium">
+                        </div>
+                        <div class="tm-git-form-input">
+                            <input type="text" placeholder="Введите номер Вашего телефона" class="uk-form-width-medium">
+                        </div>
+                        <div class="tm-git-form-input">
+                            <label><input id="phone-checkbox" type="checkbox">Позвонить мне</label>
+                        </div>
+                        <div class="tm-git-form-input">
+                            <button>отправить заявку</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+</div><!-- GetInTouch End -->
     <!-- Script for range input Start -->
     <script src="range-slider.js"></script>
     <script src="js/canvas.js"></script>
