--- a/uikit-2.27.4/astam-modular-paintings.html
+++ b/uikit-2.27.4/astam-modular-paintings.html
@@ -530,6 +530,25 @@
             </div>
         </div>
 </div><!-- GetInTouch End -->
+
+<div class="tm-content-wrap"><!-- Contacts Start -->
+
+        <div id="cont" class="tm-content-full">
+            <h1 class="uk-text-center">Наши контакты</h1>
+            <div class="tm-cont-wrap uk-grid">
+                <div class="tm-cont-block uk-width-large-1-2 uk-width-medium-1-2 uk-width-small-1-1">
+                    <div class="tm-cont-block-text uk-text-right uk-text-center-small uk-margin-bottom">г. Москва, р-н Солнцево, ул. Родниковая, 20</div>
+                    <div class="tm-cont-block-text uk-text-right uk-text-center-small uk-margin-bottom">E-mail: zakaz@astam.ru</div>
+                </div>
+                <div class="tm-cont-block uk-width-large-1-2 uk-width-medium-1-2 uk-width-small-1-1">
+                    <div class="tm-cont-block-text uk-margin-bottom uk-text-center-small">Телефон многоканальный:</div>
+                    <div class="tm-cont-block-text uk-text-center-small">+7(499) 643-46-33</div>
+                </div>
+            </div>
+        </div>
+</div><!-- Contacts End -->
+
+
     <!-- Script for range input Start -->
     <script src="range-slider.js"></script>
     <script src="js/canvas.js"></script>
