--- a/uikit-2.27.4/astam-modular-paintings.html
+++ b/uikit-2.27.4/astam-modular-paintings.html
@@ -184,7 +184,7 @@
 
         <div id="constructor" class="tm-content-full">
             <h1 class="uk-text-center">Мощный конструктор картин</h1>
-            <div class="tm-constructor-wrap">
+            <div class="tm-constructor-wrap uk-margin-bottom">
                 <div class="uk-grid">
                     <div class="uk-width-small-1-1 uk-width-medium-4-10">
                         <form class="uk-form tm-constructor-form">
@@ -301,9 +301,10 @@
                         </form>
                     </div>
                     <div class="uk-width-small-1-1 uk-width-medium-6-10">
-                        <canvas id="canvas" width="300" height="225" style="border: 1px solid grey"></canvas>
+                        <!-- <canvas id="canvas" width="300" height="225" style="border: 1px solid grey"></canvas>
                         <button class="draw">Rect</button>
-                        <button class="undraw">Del</button>
+                        <button class="undraw">Del</button> -->
+                        <img src="images/Canvas.jpg" alt="canvas">
                     </div>
                 </div>
             </div>
@@ -355,10 +356,10 @@
         <div id="pics" class="tm-content-full">
             <h1 class="uk-text-center">Посмотреть в интерьере</h1>
             <div class="tm-pics-wrap">
-                <div class="uk-flex">
-                    <div class="uk-card uk-card-default uk-card-body"><img src="images/pics/pic1.jpg" alt="pic1"></div>
-                    <div class="uk-card uk-card-default uk-card-body uk-margin-left"><img src="images/pics/pic2.jpg" alt="pic2"></div>
-                    <div class="uk-card uk-card-default uk-card-body uk-margin-left"><img src="images/pics/pic3.jpg" alt="pic3"></div>
+                <div class="uk-grid">
+                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1 uk-margin-bottom uk-text-center"><img src="images/pics/pic1.jpg" alt="pic1"></div>
+                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1 uk-margin-bottom uk-text-center"><img src="images/pics/pic2.jpg" alt="pic2"></div>
+                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1" uk-text-center><img src="images/pics/pic3.jpg" alt="pic3"></div>
                 </div>
             </div>
         </div>
@@ -369,8 +370,8 @@
         <div id="working" class="tm-content-full">
             <h1 class="uk-text-center">Как мы работаем</h1>
             <div class="tm-working-wrap">
-                <div class="uk-flex uk-flex-space-around">
-                    <div class="uk-card uk-card-default uk-card-body tm-working-item">
+                <div class="uk-grid">
+                    <div class="uk-width-large-1-6 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom tm-working-item">
                         <div class="tm-working-pic">
                             <img src="images/working/choose.png" alt="choose">
                         </div>
@@ -380,7 +381,7 @@
                             <div class="tm-working-overlay-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, nihil!</div>
                         </div>
                     </div>
-                    <div class="uk-card uk-card-default uk-card-body tm-working-item">
+                    <div class="uk-width-large-1-6 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom tm-working-item">
                         <div class="tm-working-pic">
                             <img src="images/working/order.png" alt="order">
                         </div>
@@ -390,7 +391,7 @@
                             <div class="tm-working-overlay-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, nihil!</div>
                         </div>
                     </div>
-                    <div class="uk-card uk-card-default uk-card-body tm-working-item">
+                    <div class="uk-width-large-1-6 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom tm-working-item">
                         <div class="tm-working-pic">
                             <img src="images/working/sign.png" alt="sign">
                         </div>
@@ -400,7 +401,7 @@
                             <div class="tm-working-overlay-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, nihil!</div>
                         </div>
                     </div>
-                    <div class="uk-card uk-card-default uk-card-body tm-working-item">
+                    <div class="uk-width-large-1-6 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom tm-working-item">
                         <div class="tm-working-pic">
                             <img src="images/working/create.png" alt="create">
                         </div>
@@ -410,7 +411,7 @@
                             <div class="tm-working-overlay-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, nihil!</div>
                         </div>
                     </div>
-                    <div class="uk-card uk-card-default uk-card-body tm-working-item">
+                    <div class="uk-width-large-1-6 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom tm-working-item">
                         <div class="tm-working-pic">
                             <img src="images/working/delivery.png" alt="delivery">
                         </div>
@@ -420,7 +421,7 @@
                             <div class="tm-working-overlay-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, nihil!</div>
                         </div>
                     </div>
-                    <div class="uk-card uk-card-default uk-card-body tm-working-item">
+                    <div class="uk-width-large-1-6 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom tm-working-item">
                         <div class="tm-working-pic">
                             <img src="images/working/set.png" alt="set">
                         </div>
@@ -471,10 +472,10 @@
         <div id="vidblk" class="tm-content-full">
             <h1 class="uk-text-center">Посмотрите это</h1>
             <div class="tm-vidblk-wrap">
-                <div class="uk-flex">
-                    <div class="uk-card uk-card-default uk-card-body"><img src="images/vidblk/vid1.jpg" alt="vid1"></div>
-                    <div class="uk-card uk-card-default uk-card-body uk-margin-left"><img src="images/vidblk/vid2.jpg" alt="vid2"></div>
-                    <div class="uk-card uk-card-default uk-card-body uk-margin-left"><img src="images/vidblk/vid3.jpg" alt="vid3"></div>
+                <div class="uk-grid">
+                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1 uk-margin-bottom uk-text-center"><img src="images/vidblk/vid1.jpg" alt="vid1"></div>
+                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1 uk-margin-bottom uk-text-center"><img src="images/vidblk/vid2.jpg" alt="vid2"></div>
+                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1 uk-margin-bottom uk-text-center"><img src="images/vidblk/vid3.jpg" alt="vid3"></div>
                 </div>
             </div>
         </div>
@@ -548,6 +549,14 @@
         </div>
 </div><!-- Contacts End -->
 
+<div class="tm-content-wrap"><!-- Map Start -->
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aef7a6f4ade763ab6c24f9259eaa0a511b5e9b12411ecacfe0be8c6a53c2fa108&amp;width=100%&amp;height=400&amp;lang=ru_UA&amp;scroll=true"></script>
+</div><!-- Map End -->
+<div class="tm-content-wrap"><!-- Copyright Start -->
+    <div id="copy" class="tm-content-full uk-text-center">
+        ©  ASTA M. Модульные картины. 2017. Все права защищены.
+    </div>
+</div><!-- Copyright Start -->
 
     <!-- Script for range input Start -->
     <script src="range-slider.js"></script>
