--- a/uikit-2.27.4/astam-modular-paintings.html
+++ b/uikit-2.27.4/astam-modular-paintings.html
@@ -29,6 +29,8 @@
     <script src="js/components/parallax.min.js"></script>
     <script src="js/components/sticky.min.js"></script>
 
+    <script src="https://cdn.rawgit.com/konvajs/konva/1.7.3/konva.min.js"></script>
+
 <!-- Formstyler Plugin -->
     <link href="js/formstyler-plugin/jquery.formstyler.css" rel="stylesheet" />
     <link href="js/formstyler-plugin/jquery.formstyler.theme.css" rel="stylesheet" />
@@ -301,10 +303,16 @@
                         </form>
                     </div>
                     <div class="uk-width-small-1-1 uk-width-medium-6-10">
-                        <!-- <canvas id="canvas" width="300" height="225" style="border: 1px solid grey"></canvas>
-                        <button class="draw">Rect</button>
-                        <button class="undraw">Del</button> -->
-                        <img src="images/Canvas.jpg" alt="canvas">
+                        <!-- <button class="undraw">Del</button>  -->
+                        <div class="canvas">
+                            <div id="canvas" style="border: 1px solid grey"></div>
+                            <img src="images/Canvas1.jpg" alt="canvas"> 
+                            <i class="tm-canv-icon tm-draw uk-icon-pencil-square-o uk-icon-hover"></i>
+                            <i class="tm-canv-icon tm-del uk-icon-close uk-icon-hover"></i>
+                            <i class="tm-canv-icon tm-undo uk-icon-mail-reply uk-icon-hover"></i>
+                            <i class="tm-canv-icon tm-redo uk-icon-mail-forward uk-icon-hover"></i>
+                            <i class="tm-canv-icon tm-rem uk-icon-trash-o uk-icon-hover"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -451,11 +459,11 @@
                         <li>Возможность загрузки огромных фотографий</li>
                     </ul>
                 </div>
-                <div class="madein-block-wrap uk-flex">
-                    <div class="madein-block madein-block-pic">
+                <div class="madein-block-wrap uk-grid">
+                    <div class="madein-block madein-block-pic uk-hidden-small uk-width-large-1-2 uk-width-medium-1-2">
                         <img src="images/madein/girl.png" alt="TbOTR">
                     </div>
-                    <div class="madein-block madein-block-text">
+                    <div class="madein-block madein-block-text uk-width-large-1-2 uk-width-medium-1-2 uk-width-small-1-1">
                         <div class="madein-block-text-in">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt debitis, ut consequatur impedit quaerat tempora a aperiam modi officiis ullam ab, hic excepturi architecto dolorem. Est, hic amet repudiandae impedit nulla placeat veritatis facere officiis harum, dicta, voluptate assumenda eligendi ad sunt ab minus sequi quae illo, natus beatae nostrum. <br> <br>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt debitis, ut consequatur impedit quaerat tempora a aperiam modi officiis ullam ab, hic excepturi architecto dolorem. Est, hic amet repudiandae impedit nulla placeat veritatis facere officiis harum, dicta, voluptate assumenda eligendi ad sunt ab minus sequi quae illo, natus beatae nostrum. <br> <br>
