--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -296,7 +296,7 @@
 
                             <div class="uk-grid">
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2">
-                                    <button class="uk-button tm-constructor-form-order-btn">Заказать</button>
+                                    <button class="uk-button tm-constructor-form-order-btn tm-book">Заказать</button>
                                 </div>
                             </div>
 
@@ -312,6 +312,7 @@
                             <i class="tm-canv-icon tm-undo uk-icon-mail-reply uk-icon-hover"></i>
                             <i class="tm-canv-icon tm-redo uk-icon-mail-forward uk-icon-hover"></i>
                             <i class="tm-canv-icon tm-rem uk-icon-trash-o uk-icon-hover"></i>
+                            <i class="tm-canv-icon tm-cog uk-icon-cog uk-icon-hover"></i>
                         </div>
                     </div>
                 </div>
