--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -223,12 +223,13 @@
                                     <div class="uk-form-row">
                                         <p class="uk-form-help-block">Или загрузите ваше изображение (jpg, png)</p>
                                         <input type="file" oi-file="options"  id="logo"  accept="image/*,image/jpeg,image/png,image/jpg"> 
-                                         <!-- <img src="" id="imgprvw" alt="">  -->
+                                         <!--  <img src="" id="imgprvw" alt="">   -->
                                     </div>
                                 </div>
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2">
                                     <div class="uk-form-row">
-                                        <button class="uk-button uk-button-primary">Загрузить</button>
+                                        <button onclick="return false;"class="uk-button uk-button-primary">Загрузить</button>
+                                        <i class="tm-canv-icon tm-api uk-icon-download uk-icon-hover"></i> 
                                     </div>
                                 </div>
                             </div>
