--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -194,14 +194,19 @@
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2">
                                     <div class="uk-form-row">
                                         <label class="uk-form-label">Выбор изображения</label>
-                                        <a href="#my-id" class="uk-button" data-uk-modal>Подобрать из каталога</a>
+                                        <a href="#my-id" class="uk-button tm-api" data-uk-modal>Подобрать из каталога</a>
 
                                         <div id="my-id" class="uk-modal tm-modal">
                                             <div class="uk-modal-dialog uk-modal-dialog-large">
                                                 <h4>aaaaaaaaaaaaaaaaaaaaaaa</h4>
                                                 <p>...</p>
-                                                <div class="uk-overflow-container">Тут выбор картинок</div>
-                                                <p>...</p>
+                                                <div class="uk-overflow-container">
+                                                    <div class="uk-grid tm-modal-pics">
+                                                        <!-- <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom">
+                                                            <img src="images/tpls/work1.jpg" alt="work1">
+                                                        </div> -->
+                                                    </div>
+                                                </div>
                                                 <a class="uk-modal-close uk-close"></a>
                                             </div>
                                         </div>
