--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -198,8 +198,7 @@
 
                                         <div id="my-id" class="uk-modal tm-modal">
                                             <div class="uk-modal-dialog uk-modal-dialog-large">
-                                                <h4>aaaaaaaaaaaaaaaaaaaaaaa</h4>
-                                                <p>...</p>
+                                                <h4>Выберите картинку</h4>
                                                 <div class="uk-overflow-container">
                                                     <div class="uk-grid tm-modal-pics">
                                                         <!-- <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom">
