--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -233,7 +233,7 @@
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2">
                                     <div class="uk-form-row">
                                         <button onclick="return false;"class="uk-button uk-button-primary">Загрузить</button>
-                                        <i class="tm-canv-icon tm-api uk-icon-download uk-icon-hover"></i> 
+                                        <!-- <i class="tm-canv-icon tm-api uk-icon-download uk-icon-hover"></i>  -->
                                     </div>
                                 </div>
                             </div>
