add koef and summarization

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -217,7 +217,7 @@
                                     <div class="uk-form-row">
                                         <label class="uk-form-label">Стоимость:</label>
                                         <div class="tm-constructor-form-price">
-                                            <span>3285</span> р
+                                            <span class="js-total">0</span> р
                                         </div>
                                     </div>
                                 </div>
