--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -303,6 +303,7 @@
                             <div class="uk-grid">
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2">
                                     <button class="uk-button tm-constructor-form-order-btn tm-book">Заказать</button>
+                                    <!-- <a href="#see-in" class="uk-button tm-api" data-uk-modal>Посмотреть в интерьере</a> -->
                                 </div>
                             </div>
 
@@ -373,10 +374,24 @@
             <h1 class="uk-text-center">Посмотреть в интерьере</h1>
             <div class="tm-pics-wrap">
                 <div class="uk-grid">
-                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1 uk-margin-bottom uk-text-center"><img src="images/pics/pic1.jpg" alt="pic1"></div>
-                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1 uk-margin-bottom uk-text-center"><img src="images/pics/pic2.jpg" alt="pic2"></div>
-                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1" uk-text-center><img src="images/pics/pic3.jpg" alt="pic3"></div>
+                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1 uk-margin-bottom uk-text-center"><img class="js-inter" src="images/pics/pic1.jpg" alt="pic1"></div>
+                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1 uk-margin-bottom uk-text-center"><img class="js-inter" src="images/pics/pic2.jpg" alt="pic2"></div>
+                    <div class="uk-width-large-1-3 uk-width-medium-1-3 uk-width-small-1-1" uk-text-center><img class="js-inter" src="images/pics/pic3.jpg" alt="pic3"></div>
                 </div>
+            </div>
+        </div>
+        <div id="see-in" class="uk-modal tm-modal">
+            <div class="uk-modal-dialog uk-modal-dialog-large">
+               <!--  <h4>Выберите картинку</h4> -->
+                <div class="uk-overflow-container">
+                    <div class="tm-see-pics uk-text-center">
+                            <img class="js-bgpic" src="images/pics/pic1.jpg" alt="work1">
+                            <img class="tm-ready" src="" alt="">
+                        <!-- <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom">
+                        </div> -->
+                    </div>
+                </div>
+                <a class="uk-modal-close uk-close"></a>
             </div>
         </div>
 </div><!-- Pics End -->
