--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -356,8 +356,8 @@
                             <!-- <img src="images/Canvas1.jpg" alt="canvas"> -->
                             <i class="tm-canv-icon tm-draw uk-icon-pencil-square-o uk-icon-hover"></i>
                             <i class="tm-canv-icon tm-del uk-icon-close uk-icon-hover"></i>
-                            <i class="tm-canv-icon tm-upload uk-icon-upload uk-icon-hover"></i> 
-                            <i class="tm-canv-icon tm-download uk-icon-download uk-icon-hover"></i> 
+                            <i class="tm-canv-icon tm-undo uk-icon-mail-reply uk-icon-hover"></i> 
+                            <i class="tm-canv-icon tm-redo uk-icon-mail-forward uk-icon-hover"></i> 
                             <i class="tm-canv-icon tm-save uk-icon-save uk-icon-hover"></i>
                             <i class="tm-canv-icon tm-rem uk-icon-trash-o uk-icon-hover"></i>
                             <i class="tm-canv-icon tm-check uk-icon-check uk-icon-hover"></i>
