--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -32,7 +32,7 @@
     <script src="https://cdn.rawgit.com/konvajs/konva/1.7.3/konva.min.js"></script>
 
 <!-- Formstyler Plugin -->
-    <link href="js/formstyler-plugin/jquery.formstyler.css" rel="stylesheet" />
+    <!-- <link href="js/formstyler-plugin/jquery.formstyler.css" rel="stylesheet" />
     <link href="js/formstyler-plugin/jquery.formstyler.theme.css" rel="stylesheet" />
     <script src="js/formstyler-plugin/jquery.formstyler.min.js"></script>
     <script>
@@ -43,7 +43,7 @@
 
             });
         })(jQuery);
-    </script>
+    </script> -->
 
     <!-- Range Slider Plugin -->
     <style>
@@ -245,7 +245,7 @@
                                         <div class="tm-constructor-form-range">
                                             <div class="tm-constructor-val val-left">50</div>
                                             <div class="tm-constructor-val val-right">135</div>
-                                            <input type="range" min="50" max="135" step="5" value="100" data-buffer="0" data-rangeSlider />
+                                            <input class="js-dimen" type="range" min="50" max="135" step="5" value="100" data-buffer="0" data-rangeSlider />
                                             <output class="tm-constructor-form-range-info"></output>
                                         </div>
                                     </div>
@@ -261,41 +261,52 @@
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2">
                                     <div class="uk-form-row">
                                         <label class="uk-form-label">Материал</label>
-                                        <select>
-                                            <option>Выберите</option>
-                                            <option>Сатин</option>
-                                            <option>Другой материал</option>
-                                            <option>Не сатин</option>
+                                        <select class="js-material">
+                                            <option value="1">Выберите</option>
+                                            <option value="2">Холст натуральный глянец</option>
+                                            <option value="3">Холст натуральный матовый</option>
+                                            <option value="4">Холст искусственный глянцевый</option>
+                                            <option value="5">Холст искусственный матовый</option>
+                                            <option value="6">Плёнка ПВХ глянцевая</option>
+                                            <option value="7">Плёнка ПВХ матовая</option>
+                                            <option value="8">Плёнка ПВХ сатиновая</option>
+                                            <option value="9">Дескор - (ткань полиэстер)</option>
+                                            <option value="10">Баннерная ткань DLS-Blackout</option>
                                         </select>
                                     </div>
                                     <div class="uk-form-row">
                                         <label class="uk-form-label">Покрытие</label>
-                                        <select>
-                                            <option>Выберите</option>
-                                            <option>Лак</option>
-                                            <option>Воск</option>
-                                            <option>Не воск</option>
+                                        <select class="js-covering">
+                                            <option value="1">Выберите</option>
+                                            <option value="2">Структурный гель</option>
+                                            <option value="3">Лак глянцевый</option>
+                                            <option value="4">Лак матовый</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2">
                                     <div class="uk-form-row">
                                         <div class="uk-form-row">
-                                            <label class="uk-form-label">Торец</label>
-                                            <select>
-                                                <option>Выберите</option>
-                                                <option>Торец 1</option>
-                                                <option>Другой Торец</option>
-                                                <option>Торец 2</option>
+                                            <label class="uk-form-label">Виды подрамника</label>
+                                            <select class="js-underframe">
+                                                <option value="0">Выберите</option>  
+                                                <optgroup label="Виды подрамника">
+                                                    <option value="1">Подрамник  толщина 20 мм</option>
+                                                    <option value="2">Подрамник  толщина 40 мм</option>
+                                                </optgroup>
+                                                <optgroup label="Без подрамника">
+                                                    <option value="3">Рамка алюминиевая 17 мм.</option>
+                                                    <option value="4">Рамка алюминиевая 22 мм.</option>
+                                                </optgroup>
                                             </select>
                                         </div>
                                         <div class="uk-form-row">
-                                            <label class="uk-form-label">Типы кромок</label>
-                                            <select>
-                                                <option>Выберите</option>
-                                                <option>Кромка 1</option>
-                                                <option>Ещё Кромка 2</option>
-                                                <option>Кромка 3</option>
+                                            <label class="uk-form-label">Стилизация</label>
+                                            <select class="js-stylization">
+                                                <option value="1">Выберите</option>
+                                                <option value="2">Живопись</option>
+                                                <option value="3">Фотоколлаж </option>
+                                                <option value="4">Обработка, коррекция</option>
                                             </select>
                                         </div>
                                     </div>
