--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -32,18 +32,18 @@
     <script src="https://cdn.rawgit.com/konvajs/konva/1.7.3/konva.min.js"></script>
 
 <!-- Formstyler Plugin -->
-    <!-- <link href="js/formstyler-plugin/jquery.formstyler.css" rel="stylesheet" />
+    <!--  <link href="js/formstyler-plugin/jquery.formstyler.css" rel="stylesheet" />
     <link href="js/formstyler-plugin/jquery.formstyler.theme.css" rel="stylesheet" />
     <script src="js/formstyler-plugin/jquery.formstyler.min.js"></script>
     <script>
-        (function($) {
-            $(function() {
+         (function($) { 
+             $(function() {
 
                 $('input, select').styler();
 
-            });
-        })(jQuery);
-    </script> -->
+            }); 
+         })(jQuery); 
+    </script>  -->
 
     <!-- Range Slider Plugin -->
     <style>
@@ -194,7 +194,7 @@
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2">
                                     <div class="uk-form-row">
                                         <label class="uk-form-label">Выбор изображения</label>
-                                        <a href="#my-id" class="uk-button tm-api" data-uk-modal>Подобрать из каталога</a>
+                                        <a href="#my-id" class="uk-text-center tm-api" data-uk-modal>Подобрать из каталога</a>
 
                                         <div id="my-id" class="uk-modal tm-modal">
                                             <div class="uk-modal-dialog uk-modal-dialog-large">
@@ -226,13 +226,14 @@
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2">
                                     <div class="uk-form-row">
                                         <p class="uk-form-help-block">Или загрузите ваше изображение (jpg, png)</p>
-                                        <input type="file" oi-file="options"  id="logo"  accept="image/*,image/jpeg,image/png,image/jpg"> 
+                                        <input type="file" class="uk-hidden" oi-file="options"  id="logo"  accept="image/*,image/jpeg,image/png,image/jpg"> 
                                          <!--  <img src="" id="imgprvw" alt="">   -->
+                                         <a href="" class="js-file uk-text-center">Загрузить</a>
                                     </div>
                                 </div>
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2">
                                     <div class="uk-form-row">
-                                        <button onclick="return false;"class="uk-button uk-button-primary">Загрузить</button>
+                                        <!-- <button onclick="return false;" class="uk-button uk-button-primary">Загрузить</button> -->
                                         <!-- <i class="tm-canv-icon tm-api uk-icon-download uk-icon-hover"></i>  -->
                                     </div>
                                 </div>
@@ -289,7 +290,7 @@
                                         <div class="uk-form-row">
                                             <label class="uk-form-label">Виды подрамника</label>
                                             <select class="js-underframe">
-                                                <option value="0">Выберите</option>  
+                                                <option value="1">Выберите</option>  
                                                 <optgroup label="Виды подрамника">
                                                     <option value="1">Подрамник  толщина 20 мм</option>
                                                     <option value="2">Подрамник  толщина 40 мм</option>
@@ -302,12 +303,14 @@
                                         </div>
                                         <div class="uk-form-row">
                                             <label class="uk-form-label">Стилизация</label>
-                                            <select class="js-stylization">
-                                                <option value="1">Выберите</option>
-                                                <option value="2">Живопись</option>
-                                                <option value="3">Фотоколлаж </option>
-                                                <option value="4">Обработка, коррекция</option>
-                                            </select>
+                                            <div class="tm-style">
+                                                <select class="js-stylization">
+                                                    <option value="1">Выберите</option>
+                                                    <option value="2">Живопись</option>
+                                                    <option value="3">Фотоколлаж </option>
+                                                    <option value="4">Обработка, коррекция</option>
+                                                </select>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -315,18 +318,19 @@
 
                             <div class="uk-grid">
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2">
-                                    <button class="uk-button tm-constructor-form-order-btn tm-book">Заказать</button>
+                                    <button class="tm-constructor-form-order-btn tm-book uk-text-center">Заказать</button>
                                     <!-- <a href="#see-in" class="uk-button tm-api" data-uk-modal>Посмотреть в интерьере</a> -->
                                 </div>
                             </div>
 
                         </form>
                     </div>
-                    <div class="uk-width-small-1-1 uk-width-medium-6-10">
+                    <div class="uk-width-small-1-1 uk-width-medium-6-10 uk-text-center uk-flex uk-flex-middle uk-flex-space-around">
                         <!-- <button class="undraw">Del</button>  -->
                         <div class="canvas">
                             <div class="canvas-wrap">
                                 <div class="tm-rul-wrap js-ruler-gor uk-grid uk-grid-collapse">
+                                    <div class="tm-ruler rul1"><span>0</span></div>
                                     <div class="tm-ruler rul1"><span>5</span></div>
                                     <div class="tm-ruler rul2"><span>10</span></div>
                                     <div class="tm-ruler rul3"><span>15</span></div>
@@ -350,6 +354,7 @@
                                 </div>
                                 <div class="tm-canv-wrap uk-grid uk-grid-collapse">
                                     <div class="tm-rulv-wrap js-ruler-ver">
+                                        <div class="tm-ruler rul1"><span>0</span></div>
                                         <div class="tm-ruler rul1"><span>5</span></div>
                                         <div class="tm-ruler rul2"><span>10</span></div>
                                         <div class="tm-ruler rul3"><span>15</span></div>
@@ -360,8 +365,12 @@
                                         <div class="tm-ruler rul8"><span>40</span></div>
                                         <div class="tm-ruler rul9"><span>45</span></div>
                                         <div class="tm-ruler rul10"><span>50</span></div>
+                                        <div class="tm-ruler rul10"><span>55</span></div>
                                     </div>
                                     <div id="canvas" style="border: 1px solid grey"></div>
+                                </div>
+                                <div class="tm-canv-bottom">
+
                                 </div>
                             </div>
                             <!-- <img src="images/Canvas1.jpg" alt="canvas"> -->
@@ -661,5 +670,18 @@
         });
     </script>
     <!-- Script for working block End -->
+    <!-- Formstyler Plugin -->
+     <link href="js/formstyler-plugin/jquery.formstyler.css" rel="stylesheet" />
+    <link href="js/formstyler-plugin/jquery.formstyler.theme.css" rel="stylesheet" />
+    <script src="js/formstyler-plugin/jquery.formstyler.min.js"></script>
+    <script>
+         (function($) { 
+             $(function() {
+
+                $('input, select').styler();
+
+            }); 
+         })(jQuery); 
+    </script> 
 </body>
 </html>
