markup ruler, canvas

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -370,7 +370,14 @@
                                     <div id="canvas" style="border: 1px solid grey"></div>
                                 </div>
                                 <div class="tm-canv-bottom">
-
+                                    <div class="tm-info uk-text-left">
+                                        <i class="uk-icon-info uk-icon-hover"></i>
+                                        <a href="#">Как пользоваться конструктором</a>
+                                    </div>
+                                    <div class="tm-info uk-text-left">
+                                        <i class="uk-icon-exclamation uk-icon-hover"></i>
+                                        <span>Если Вы не можете воспользоваться конструктором, то любую модель картины мы можем сформировать за вас</span><a href="#">Помогите мне</a>
+                                    </div>
                                 </div>
                             </div>
                             <!-- <img src="images/Canvas1.jpg" alt="canvas"> -->
