how to use modal

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -254,7 +254,7 @@
                                 <div class="tm-canv-bottom">
                                     <div class="tm-info uk-text-left">
                                         <i class="uk-icon-info uk-icon-hover"></i>
-                                        <a href="#">Как пользоваться конструктором</a>
+                                        <a href="#how-to-use" data-uk-modal>Как пользоваться конструктором</a>
                                     </div>
                                     <div class="tm-info uk-text-left">
                                         <i class="uk-icon-exclamation uk-icon-hover"></i>
@@ -502,6 +502,24 @@
             </div>
         </div>
 </div><!-- Pics End -->
+        <div id="how-to-use" class="uk-modal">
+            <div class="uk-modal-dialog uk-modal-dialog-large">
+                <a class="uk-modal-close uk-close"></a>
+               <h4>Как пользоваться конструктором</h4>
+                <div class="uk-overflow-container">
+                    <div class="tm-see-pics uk-text-center">
+                        <ul>
+                            <li>Lorem</li>
+                            <li>Lorem</li>
+                            <li>Lorem</li>
+                            <li>Lorem</li>
+                            <li>Lorem</li>
+                            <li>Lorem</li>
+                        </ul>     
+                    </div>
+                </div>
+            </div>
+        </div>
 
 <div class="tm-content-wrap"><!-- Working Start -->
 
